--- a/Uyinene's Ledger/contracts/hardhat/package.json
+++ b/Uyinene's Ledger/contracts/hardhat/package.json
@@ -5,14 +5,21 @@
   "scripts": {
     "compile": "hardhat compile",
     "test": "hardhat test",
-    "deploy": "hardhat run scripts/deploy.ts --network primordial"
+    "deploy": "hardhat run scripts/deploy.ts --network primordial",
+    "deploy:local": "hardhat run scripts/deploy.ts --network localhost",
+    "verify": "hardhat verify --network primordial",
+    "node": "hardhat node",
+    "clean": "hardhat clean"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@openzeppelin/hardhat-upgrades": "^3.9.0",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.24",
+    "chai": "^4.4.1",
     "ethers": "^6.11.1",
     "hardhat": "^2.19.5",
     "ts-node": "^10.9.2",
