--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-navigation-menu": "^1.2.14"
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "react-icons": "^5.5.0"
   }
 }
