--- a/Uyinene's Ledger/frontend/package.json
+++ b/Uyinene's Ledger/frontend/package.json
@@ -17,6 +17,7 @@
     "@web3modal/wagmi": "^5.1.3",
     "class-variance-authority": "^0.7.1",
     "encoding": "^0.1.13",
+    "ethers": "^6.15.0",
     "lucide-react": "^0.541.0",
     "next": "14.2.6",
     "pino-pretty": "^13.0.0",
@@ -28,13 +29,15 @@
     "wagmi": "^2.12.25"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
+    "hardhat": "^3.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
