--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "axios": "^1.11.0",
     "claude": "^0.1.1",
     "ethers": "^6.15.0",
-    "ipfs-http-client": "^60.0.1"
+    "ipfs-http-client": "^60.0.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.14",
