--- a/Uyinene's Ledger/frontend/package.json
+++ b/Uyinene's Ledger/frontend/package.json
@@ -23,6 +23,7 @@
     "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^7.8.2",
     "tailwind-merge": "^3.3.1",
     "usehooks-ts": "^3.1.0",
     "viem": "^2.21.40",
